apps/freshrss/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  namespace: freshrss
spec:
  selector:
    app: freshrss
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
  type: NodePort
